# airbyte-nemo

airbyte-integrations/connectors/destination-nemo/: README.md  dockerfile  main.py  metadata.yaml  pyproject.toml  setup.py
airbyte-integrations/connectors/destination-nemo/destination_nemo/: __init__.py  destination.py  run.py  spec.json
airbyte-integrations/connectors/destination-sredx/: README.md  dockerfile  main.py  metadata.yaml  pyproject.toml  script.py  setup.py
airbyte-integrations/connectors/destination-sredx-github/: README.md  dockerfile  main.py  metadata.yaml  pyproject.toml  setup.py
airbyte-integrations/connectors/destination-sredx-github/destination_sredx_github/: __init__.py  destination.py  run.py  spec.json
airbyte-integrations/connectors/destination-sredx/destination_sredx/: __init__.py  destination.py  run.py  spec.json
airbyte-integrations/connectors/destination-sredx/destination_sredx/config/: env.py
airbyte-integrations/connectors/destination-sredx/destination_sredx/db/: connection.py
airbyte-integrations/connectors/destination-sredx/destination_sredx/db/models/github/: pull_request.py
airbyte-integrations/connectors/destination-sredx/destination_sredx/lib/: metric_calculator.py  utils.py
airbyte-integrations/connectors/destination-sredx/destination_sredx/process/: process.py  process_registry.py
airbyte-integrations/connectors/destination-sredx/destination_sredx/process/github/: comments.py  pull_requests.py
